# Project_3_job-search-with-database

./: README.md  main.py  pyproject.toml
src/: api_hh.py  config.py  currency.py  db_manager.py  db_setup.py  employer_selector.py  loader.py  output_utils.py
